# Predictive-Inventory-Engine

./: .gitignore  app.py  pyproject.toml  requirements.txt  store_1_forecast.pth  train.py
store_1_multi_category_lstm/: data.pkl
store_1_multi_category_lstm/.data/: serialization_id
store_1_multi_category_lstm/data/: 0  1  11  13  16  17  19  2  20  22  26  28  29  31  32  4  5  7  8
templates/: index.html
